호감표시를 하면 쿨타임이 지정된다.